resources/cert-manager/aws/aws-ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-tls
  annotations:
    kubernetes.io/ingress.class: public-ingress
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"
spec:
  ingressClassName: public-ingress
  tls:
    - hosts:
        - demo-tls.sandbox.launch.nttdata.com
      secretName: hello-world-ingress-tls # pragma: allowlist secret
  rules:
  - host: demo-tls.sandbox.launch.nttdata.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
